--- a/ProyectoHospital/nbproject/project.properties
+++ b/ProyectoHospital/nbproject/project.properties
@@ -35,11 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoHospital
 endorsed.classpath=
 excludes=
+file.reference.argon2-jvm-2.11.jar=jar/argon2-jvm-2.11.jar
+file.reference.argon2-jvm-nolibs-2.11.jar=jar/argon2-jvm-nolibs-2.11.jar
+file.reference.jna-5.8.0.jar=jar/jna-5.8.0.jar
 file.reference.json-simple-1.1.1.jar=jar/json-simple-1.1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.argon2-jvm-2.11.jar}:\
+    ${file.reference.argon2-jvm-nolibs-2.11.jar}:\
+    ${file.reference.jna-5.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
